# ReST-Framework

./: .gitignore  README.md  db.sqlite3  pyproject.toml
framework/: asgi.py  settings.py  urls.py  wsgi.py
quickstart/: admin.py  models.py  serializers.py  urls.py  views.py
quickstart/management/commands/: bootstrap_data.py
quickstart/migrations/: 0001_initial.py
