[tool.poetry]
name = "rest-framework"
version = "0.1.0"
description = ""
authors = ["Sasha Lukas <sashamati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.12"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
